Fixed #69, app now appears to work completely on IE10

--- a/app/assets/stylesheets/modules/card/_card.scss
+++ b/app/assets/stylesheets/modules/card/_card.scss
@@ -9,6 +9,7 @@
    $dark_color: darken($color, $card_color_variation_amount);
    $light_color: lighten($color, $card_color_variation_amount);
    @include background-image(linear-gradient(top, $light_color, $dark_color));
+   background-image: -ms-linear-gradient(top, $light_color, $dark_color);
 
    .suit {
       color: darken($color, $card_color_variation_amount);
